@@ -448,6 +448,12 @@ Release 2.6.0 - UNRELEASED
     HADOOP-11113. Namenode not able to reconnect to KMS after KMS restart.
     (Arun Suresh via wang)
 
+    HADOOP-11160. Fix typo in nfs3 server duplicate entry reporting.
+    (Charles Lamb via wheat9)
+
+    HADOOP-11151. Automatically refresh auth token and retry on auth failure.
+    (Arun Suresh via wang)
+
     BREAKDOWN OF HDFS-6134 AND HADOOP-10150 SUBTASKS AND RELATED JIRAS
   
       HADOOP-10734. Implement high-performance secure random number sources.
